--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push, comment issues & post new PR
-      # Remove the ones you do not need
+      #checkov:skip=CKV2_GHA_1:The permission is needed for linter commits
       contents: write
       issues: write
       pull-requests: write
