chore: give permission to write to workflows

--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -29,6 +29,7 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
+      actions: write
     steps:
       # Git Checkout
       - name: Checkout Code
